# SquidTWL

./: .gitignore  Cargo.toml  GBATEK_TECHNOBABBLE.rst  README.md  README.rst  nitro.ld  pyproject.toml
.cargo/: config.toml
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/guides/: getting-started.rst
examples/: README.rst
examples/framebuffer/: Cargo.toml  build.rs
examples/framebuffer/src/: main.rs
examples/input/: Cargo.toml
examples/input/src/: main.rs
squidtwl/: Cargo.toml
squidtwl/src/: critical.rs  input.rs  lib.rs  runtime.rs  start.s
squidtwl/src/gx/: dispcnt.rs  dispctl.rs  dispstat.rs  engine.rs  mod.rs  vram.rs
squidtwl/src/gx2d/: eg.rs  engine.rs  framebuffer.rs  mod.rs
squidtwl/src/gx2d/framebuffer/: eg.rs  mod.rs
squidtwl/src/interrupt/: irq.rs  mod.rs
squidtwl/src/raw/: arm.rs  mod.rs  supervisor.rs  supervisor.s  va.rs
