[project]
name = "squidtwl"
version = "6.6.6"
description = "Default template for PDM package"
authors = [
    {name = "Lura Skye", email = "fuyukaii@proton.me"},
]
dependencies = ["sphinx>=8.1.3", "furo>=2024.8.6"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}

[tool.pdm]
distribution = false
