[package]
name = "squidtwl"
version = "25.0.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A mid-level SDK for the NTR/TWL"

[dependencies]
bitflags = { version = "=2.6.0" }
thiserror = { version = "=2.0.8", default-features = false }
voladdress = { version = "=1.4.0" }
bitfield-struct = { version = "=0.10.0" }
sealed = { version = "=0.6.0" }

# required for allocators and critical sections
spin = { version = "=0.9.8", features = ["portable_atomic"] }
portable-atomic = { version = "=1.10.0", default-features = false, features = ["critical-section"]}
critical-section = { version = "=1.2.0", features = ["restore-state-u32"] }

# feature deps
embedded-graphics = { version = "=0.8.1", optional = true }

[lints]
workspace = true

[features]
# The default IRQ handler, which uses an IRQ table.
irq = []

# Support for ``embedded_graphics`` via the framebuffer.
embedded_graphics = ["dep:embedded-graphics"]

default = ["irq"]
